HW4-keyvan-dadashzadeh-97522148/Q4/gen/Q4Parser.py
# Generated from Q4.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class Q4Parser ( Parser ):

    grammarFileName = "Q4.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'{'", "'public'", "'static'", 
                     "'void'", "'main'", "'('", "'String'", "'['", "']'", 
                     "')'", "'}'", "'extends'", "';'", "','", "'return'", 
                     "'int'", "'boolean'", "'if'", "'else'", "'while'", 
                     "'System.out.println'", "'='", "'&&'", "'!'", "'<'", 
                     "'+'", "'true'", "'-'", "'false'", "'*'", "'.'", "'this'", 
                     "'new'", "'length'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "INTEGER_LITERAL", "IDENTIFIER", "Whitespace", "BlockComment", 
                      "LineComment", "Newline" ]

    RULE_program = 0
    RULE_mainClass = 1
    RULE_classDeclaration = 2
    RULE_varDeclaration = 3
    RULE_methodDeclaration = 4
    RULE_type = 5
    RULE_statement = 6
    RULE_expression = 7
    RULE_identifier = 8

    ruleNames =  [ "program", "mainClass", "classDeclaration", "varDeclaration", 
                   "methodDeclaration", "type", "statement", "expression", 
                   "identifier" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    INTEGER_LITERAL=36
    IDENTIFIER=37
    Whitespace=38
    BlockComment=39
    LineComment=40
    Newline=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainClass(self):
            return self.getTypedRuleContext(Q4Parser.MainClassContext,0)


        def EOF(self):
            return self.getToken(Q4Parser.EOF, 0)

        def classDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q4Parser.ClassDeclarationContext)
            else:
                return self.getTypedRuleContext(Q4Parser.ClassDeclarationContext,i)


        def getRuleIndex(self):
            return Q4Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = Q4Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 18
            self.mainClass()
            self.state = 22
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Q4Parser.T__0:
                self.state = 19
                self.classDeclaration()
                self.state = 24
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 25
            self.match(Q4Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainClassContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q4Parser.IdentifierContext)
            else:
                return self.getTypedRuleContext(Q4Parser.IdentifierContext,i)


        def statement(self):
            return self.getTypedRuleContext(Q4Parser.StatementContext,0)


        def getRuleIndex(self):
            return Q4Parser.RULE_mainClass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainClass" ):
                listener.enterMainClass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainClass" ):
                listener.exitMainClass(self)




    def mainClass(self):

        localctx = Q4Parser.MainClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_mainClass)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self.match(Q4Parser.T__0)
            self.state = 28
            self.identifier()
            self.state = 29
            self.match(Q4Parser.T__1)
            self.state = 30
            self.match(Q4Parser.T__2)
            self.state = 31
            self.match(Q4Parser.T__3)
            self.state = 32
            self.match(Q4Parser.T__4)
            self.state = 33
            self.match(Q4Parser.T__5)
            self.state = 34
            self.match(Q4Parser.T__6)
            self.state = 35
            self.match(Q4Parser.T__7)
            self.state = 36
            self.match(Q4Parser.T__8)
            self.state = 37
            self.match(Q4Parser.T__9)
            self.state = 38
            self.identifier()
            self.state = 39
            self.match(Q4Parser.T__10)
            self.state = 40
            self.match(Q4Parser.T__1)
            self.state = 41
            self.statement()
            self.state = 42
            self.match(Q4Parser.T__11)
            self.state = 43
            self.match(Q4Parser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.id1 = None # IdentifierContext

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q4Parser.IdentifierContext)
            else:
                return self.getTypedRuleContext(Q4Parser.IdentifierContext,i)


        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q4Parser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(Q4Parser.VarDeclarationContext,i)


        def methodDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q4Parser.MethodDeclarationContext)
            else:
                return self.getTypedRuleContext(Q4Parser.MethodDeclarationContext,i)


        def getRuleIndex(self):
            return Q4Parser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)




    def classDeclaration(self):

        localctx = Q4Parser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(Q4Parser.T__0)
            self.state = 46
            localctx.id1 = self.identifier()
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==Q4Parser.T__12:
                self.state = 47
                self.match(Q4Parser.T__12)
                self.state = 48
                self.identifier()


            self.state = 51
            self.match(Q4Parser.T__1)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Q4Parser.T__16) | (1 << Q4Parser.T__17) | (1 << Q4Parser.IDENTIFIER))) != 0):
                self.state = 52
                self.varDeclaration()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Q4Parser.T__2:
                self.state = 58
                self.methodDeclaration()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 64
            self.match(Q4Parser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type(self):
            return self.getTypedRuleContext(Q4Parser.TypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(Q4Parser.IdentifierContext,0)


        def getRuleIndex(self):
            return Q4Parser.RULE_varDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)




    def varDeclaration(self):

        localctx = Q4Parser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.type()
            self.state = 67
            self.identifier()
            self.state = 68
            self.match(Q4Parser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.id1 = None # IdentifierContext
            self.id2 = None # IdentifierContext
            self.id3 = None # IdentifierContext

        def type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q4Parser.TypeContext)
            else:
                return self.getTypedRuleContext(Q4Parser.TypeContext,i)


        def expression(self):
            return self.getTypedRuleContext(Q4Parser.ExpressionContext,0)


        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q4Parser.IdentifierContext)
            else:
                return self.getTypedRuleContext(Q4Parser.IdentifierContext,i)


        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q4Parser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(Q4Parser.VarDeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q4Parser.StatementContext)
            else:
                return self.getTypedRuleContext(Q4Parser.StatementContext,i)


        def getRuleIndex(self):
            return Q4Parser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)




    def methodDeclaration(self):

        localctx = Q4Parser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(Q4Parser.T__2)
            self.state = 71
            self.type()
            self.state = 72
            localctx.id1 = self.identifier()
            self.state = 73
            self.match(Q4Parser.T__6)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Q4Parser.T__16) | (1 << Q4Parser.T__17) | (1 << Q4Parser.IDENTIFIER))) != 0):
                self.state = 74
                self.type()
                self.state = 75
                localctx.id2 = self.identifier()
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==Q4Parser.T__14:
                    self.state = 76
                    self.match(Q4Parser.T__14)
                    self.state = 77
                    self.type()
                    self.state = 78
                    localctx.id3 = self.identifier()
                    self.state = 84
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 87
            self.match(Q4Parser.T__10)
            self.state = 88
            self.match(Q4Parser.T__1)
            self.state = 92
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 89
                    self.varDeclaration() 
                self.state = 94
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Q4Parser.T__1) | (1 << Q4Parser.T__18) | (1 << Q4Parser.T__20) | (1 << Q4Parser.T__21) | (1 << Q4Parser.IDENTIFIER))) != 0):
                self.state = 95
                self.statement()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 101
            self.match(Q4Parser.T__15)
            self.state = 102
            self.expression(0)
            self.state = 103
            self.match(Q4Parser.T__13)
            self.state = 104
            self.match(Q4Parser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(Q4Parser.IdentifierContext,0)


        def getRuleIndex(self):
            return Q4Parser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type(self):

        localctx = Q4Parser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type)
        try:
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.match(Q4Parser.T__16)
                self.state = 107
                self.match(Q4Parser.T__8)
                self.state = 108
                self.match(Q4Parser.T__9)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.match(Q4Parser.T__17)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.match(Q4Parser.T__16)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 111
                self.identifier()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()


        def getRuleIndex(self):
            return Q4Parser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)
            self.value_attr = ctx.value_attr
            self.type_attr = ctx.type_attr



    class State_equal_assignContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Q4Parser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def identifier(self):
            return self.getTypedRuleContext(Q4Parser.IdentifierContext,0)

        def expression(self):
            return self.getTypedRuleContext(Q4Parser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_equal_assign" ):
                listener.enterState_equal_assign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_equal_assign" ):
                listener.exitState_equal_assign(self)


    class State_access_array_assignContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Q4Parser.StatementContext
            super().__init__(parser)
            self.first = None # ExpressionContext
            self.second = None # ExpressionContext
            self.copyFrom(ctx)

        def identifier(self):
            return self.getTypedRuleContext(Q4Parser.IdentifierContext,0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q4Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(Q4Parser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_access_array_assign" ):
                listener.enterState_access_array_assign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_access_array_assign" ):
                listener.exitState_access_array_assign(self)


    class State_braceContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Q4Parser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q4Parser.StatementContext)
            else:
                return self.getTypedRuleContext(Q4Parser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_brace" ):
                listener.enterState_brace(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_brace" ):
                listener.exitState_brace(self)


    class State_printlnContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Q4Parser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(Q4Parser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_println" ):
                listener.enterState_println(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_println" ):
                listener.exitState_println(self)


    class State_ifContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Q4Parser.StatementContext
            super().__init__(parser)
            self.st1 = None # StatementContext
            self.st2 = None # StatementContext
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(Q4Parser.ExpressionContext,0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q4Parser.StatementContext)
            else:
                return self.getTypedRuleContext(Q4Parser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_if" ):
                listener.enterState_if(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_if" ):
                listener.exitState_if(self)


    class State_whileContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Q4Parser.StatementContext
            super().__init__(parser)
            self.st1 = None # StatementContext
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(Q4Parser.ExpressionContext,0)

        def statement(self):
            return self.getTypedRuleContext(Q4Parser.StatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_while" ):
                listener.enterState_while(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_while" ):
                listener.exitState_while(self)



    def statement(self):

        localctx = Q4Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                localctx = Q4Parser.State_ifContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.match(Q4Parser.T__18)
                self.state = 115
                self.match(Q4Parser.T__6)
                self.state = 116
                self.expression(0)
                self.state = 117
                self.match(Q4Parser.T__10)
                self.state = 118
                localctx.st1 = self.statement()
                self.state = 119
                self.match(Q4Parser.T__19)
                self.state = 120
                localctx.st2 = self.statement()
                pass

            elif la_ == 2:
                localctx = Q4Parser.State_braceContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.match(Q4Parser.T__1)
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Q4Parser.T__1) | (1 << Q4Parser.T__18) | (1 << Q4Parser.T__20) | (1 << Q4Parser.T__21) | (1 << Q4Parser.IDENTIFIER))) != 0):
                    self.state = 123
                    self.statement()
                    self.state = 128
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 129
                self.match(Q4Parser.T__11)
                pass

            elif la_ == 3:
                localctx = Q4Parser.State_whileContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 130
                self.match(Q4Parser.T__20)
                self.state = 131
                self.match(Q4Parser.T__6)
                self.state = 132
                self.expression(0)
                self.state = 133
                self.match(Q4Parser.T__10)
                self.state = 134
                localctx.st1 = self.statement()
                pass

            elif la_ == 4:
                localctx = Q4Parser.State_printlnContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 136
                self.match(Q4Parser.T__21)
                self.state = 137
                self.match(Q4Parser.T__6)
                self.state = 138
                self.expression(0)
                self.state = 139
                self.match(Q4Parser.T__10)
                self.state = 140
                self.match(Q4Parser.T__13)
                pass

            elif la_ == 5:
                localctx = Q4Parser.State_equal_assignContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 142
                self.identifier()
                self.state = 143
                self.match(Q4Parser.T__22)
                self.state = 144
                self.expression(0)
                self.state = 145
                self.match(Q4Parser.T__13)
                pass

            elif la_ == 6:
                localctx = Q4Parser.State_access_array_assignContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 147
                self.identifier()
                self.state = 148
                self.match(Q4Parser.T__8)
                self.state = 149
                localctx.first = self.expression(0)
                self.state = 150
                self.match(Q4Parser.T__9)
                self.state = 151
                self.match(Q4Parser.T__22)
                self.state = 152
                localctx.second = self.expression(0)
                self.state = 153
                self.match(Q4Parser.T__13)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()


        def getRuleIndex(self):
            return Q4Parser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)
            self.value_attr = ctx.value_attr
            self.type_attr = ctx.type_attr


    class Expr_term_useless_4Context(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Q4Parser.ExpressionContext
            super().__init__(parser)
            self.first = None # ExpressionContext
            self.second = None # ExpressionContext
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q4Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(Q4Parser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_term_useless_4" ):
                listener.enterExpr_term_useless_4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_term_useless_4" ):
                listener.exitExpr_term_useless_4(self)


    class Expr_term_useless_5Context(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Q4Parser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(Q4Parser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_term_useless_5" ):
                listener.enterExpr_term_useless_5(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_term_useless_5" ):
                listener.exitExpr_term_useless_5(self)


    class Expr_term_useless_2Context(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Q4Parser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(Q4Parser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_term_useless_2" ):
                listener.enterExpr_term_useless_2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_term_useless_2" ):
                listener.exitExpr_term_useless_2(self)


    class Expr_term_useless_3Context(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Q4Parser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def identifier(self):
            return self.getTypedRuleContext(Q4Parser.IdentifierContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_term_useless_3" ):
                listener.enterExpr_term_useless_3(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_term_useless_3" ):
                listener.exitExpr_term_useless_3(self)


    class Expr_term_useless_1Context(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Q4Parser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_term_useless_1" ):
                listener.enterExpr_term_useless_1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_term_useless_1" ):
                listener.exitExpr_term_useless_1(self)


    class Expr_term_plusContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Q4Parser.ExpressionContext
            super().__init__(parser)
            self.first = None # ExpressionContext
            self.second = None # ExpressionContext
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q4Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(Q4Parser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_term_plus" ):
                listener.enterExpr_term_plus(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_term_plus" ):
                listener.exitExpr_term_plus(self)


    class Expr_term_falseContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Q4Parser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_term_false" ):
                listener.enterExpr_term_false(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_term_false" ):
                listener.exitExpr_term_false(self)


    class Expr_term_lessContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Q4Parser.ExpressionContext
            super().__init__(parser)
            self.first = None # ExpressionContext
            self.second = None # ExpressionContext
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q4Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(Q4Parser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_term_less" ):
                listener.enterExpr_term_less(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_term_less" ):
                listener.exitExpr_term_less(self)


    class Expr_term_minusContext(ExpressionContext):
